# rooms

./: README.md  pyproject.toml  run_game.py
.claude/: settings.json
src/backrooms/: actions.py  constants.py  engine.py  geometry.py  input_handlers.py  main.py
src/backrooms/data/: player_classes.py  registrations.py
src/backrooms/entity/: entity.py
src/backrooms/entity/components/: afflictions.py  ai.py  attributes.py  barter.py  base_component.py  charges.py  consumable.py  container.py  debris.py  dialogue.py  equipment.py  equippable.py  experience.py  fighter.py  hazard.py  hunger.py  inventory.py  light_source.py  perception.py  quickness.py  salvageable.py  sanity.py  tool.py
src/backrooms/procgen/: generator_flooded.py  generator_office.py  spawner.py
src/backrooms/rendering/: renderer.py  ui.py
src/backrooms/systems/: ai_system.py  auto_explore.py  dev_tools.py  disease_system.py  experience_system.py  hallucination_system.py  hazard_system.py  npc_social.py  rest_system.py  sanity_system.py  transition_system.py
src/backrooms/world/: crafting.py  game_map.py  level_registry.py  tile_types.py
tests/: test_attributes_math.py  test_auto_explore_hazards.py  test_combat.py  test_container.py  test_crafting.py  test_debris.py  test_dev_tools.py  test_disease_system.py  test_experience.py  test_hazard_ticks.py  test_interact.py  test_inventory.py  test_procgen_determinism.py  test_registrations.py  test_rest_system.py  test_salvage.py  test_sanity_math.py  test_spawner.py  test_transition_rules.py  test_travel.py
